--- a/.github/workflows/echo_comments.yml
+++ b/.github/workflows/echo_comments.yml
@@ -17,8 +17,8 @@ jobs:
           const { owner, repo } = context.repo;
           const issue_number = context.payload.issue.number;
           const body = context.payload.comment.body;
-          const data = await github.rest.issues.createComment({ owner, repo, issue_number, body });
-          return data.result;
+          const result = await github.rest.issues.createComment({ owner, repo, issue_number, body });
+          return result.data;
           
         
     - name: see results
