--- a/.github/workflows/echo_comments.yml
+++ b/.github/workflows/echo_comments.yml
@@ -24,5 +24,5 @@ jobs:
     - name: see results
       shell: bash
       run: |
-        echo ${{ steps.echo.result.output }}
+        echo ${{ steps.echo.outputs.result }}
     
