--- a/.github/workflows/echo_comments.yml
+++ b/.github/workflows/echo_comments.yml
@@ -22,7 +22,13 @@ jobs:
           
         
     - name: see results
+      id: results
       shell: bash
       run: |
-        echo ${{ steps.echo.outputs.result }}
+        echo "URL=$(cat ${{ steps.echo.outputs.result }} | jq -r .url)" >> $GITHUB_ENV
+        echo "HTML_URL=$(cat ${{ steps.echo.outputs.result }} | jq -r .url)" >> $GITHUB_ENV
+        
+    - name: env
+      shell: bash
+      run: env
     
